--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "normalize.css": "^8.0.1",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
+    "react-bootstrap-carousel": "^4.0.2",
     "react-dom": "^16.12.0",
+    "react-magnifier": "^3.0.4",
+    "react-multi-carousel": "^2.5.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
